--- a/chat/composer.json
+++ b/chat/composer.json
@@ -23,7 +23,8 @@
         "topthink/think-mongo": "1.*",
         "topthink/think-migration": "1.*",
         "topthink/think-queue": "1.*",
-        "topthink/think-helper": "1.*"
+        "topthink/think-helper": "1.*",
+      "ext-mysqli": "*"
     },
     "autoload": {
         "psr-4": {
