trading 疫情系统修改

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 ### Example user template template
 ### Example user template
 
-# IntelliJ project files
+# IntelliJ project Apendix
 /.idea/
 *.iml
 out
